--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="card">
              <div class="search" >
-               <input type="search" class="search-button">
+               <input type="search" class="search-button" placeholder="enter a city">
                   <button><i class="fa fa-search"></i></button>
                    </div>
                  <div class="weather loading" >
